--- a/style.css
+++ b/style.css
@@ -32,6 +32,17 @@ body {
     height: 100px;
     width: 100%;
     margin-bottom: 5px;
+    border: none;
+    overflow: auto;
+    outline: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    resize: none;
+    text-align: right;
+    font-size: 24px;
+    color: white;
+    padding: 10px;
 }
 
 #keyboard {
@@ -50,4 +61,5 @@ body {
     padding: 10px;
     font-size: 24px;
     width: 21%;
+    cursor: pointer;
 }
